# rust-web-app-boilerplate

./: Cargo.toml
migrations/: 20201012043339_initial.sql
src/: error.rs  lib.rs  main.rs  templates.rs
src/controllers/: login.rs  mod.rs  register.rs
src/models/: mod.rs  password_reset_token.rs  user.rs
templates/: hello.html  login.html  register.html
