[package]
name = "rust-web-app-boilerplate"
version = "0.1.0"
authors = ["Mat Geist <matgeist@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-session = "2.0"
async-sqlx-session = { version = "0.2", features = ["sqlite"]}
async-std = { version = "1.6", features = ["attributes"] }
rand = "0.7"
rust-argon2 = "0.8"
sqlx = { version = "0.3", features = ["sqlite"] }

